--- a/src/app/features/components/dashboard/app-overview/app-overview.component.html
+++ b/src/app/features/components/dashboard/app-overview/app-overview.component.html
@@ -1,5 +1,5 @@
 <!-- app-overview.component.html -->
-<div class="app-overview" [ngClass]="mode + '-mode'" @fadeInOut>
+<div class="app-overview" [ngClass]="mode" @fadeInOut>
   <!-- Header Section -->
   <app-overview-header [mode]="mode"></app-overview-header>
 
