--- a/src/app/shared/remote-config/components/flag-config-step/flag-config-step.component.html
+++ b/src/app/shared/remote-config/components/flag-config-step/flag-config-step.component.html
@@ -76,7 +76,7 @@
         </button>
       }
       @if (destLoading) {
-        <mat-spinner color="accent" diameter="24"></mat-spinner>
+        <mat-spinner diameter="24"></mat-spinner>
       }
       <mat-autocomplete
         #destAuto="matAutocomplete"
@@ -159,7 +159,7 @@
         </button>
       }
       @if (sourceLoading) {
-        <mat-spinner color="accent" diameter="24"></mat-spinner>
+        <mat-spinner diameter="24"></mat-spinner>
       }
       <mat-autocomplete
         #sourceAuto="matAutocomplete"
