--- a/src/animations.scss
+++ b/src/animations.scss
@@ -18,6 +18,17 @@
   }
 }
 
+@keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 @keyframes breathing {
   0% {
     transform: scale(0.9);
