--- a/src/app/features/components/dashboard/app-detail/app-detail.component.scss
+++ b/src/app/features/components/dashboard/app-detail/app-detail.component.scss
@@ -1,3 +1,5 @@
+@use "../../../../styles/_shared_components";
+
 /* Main Container */
 .remote-details {
   display: flex;
@@ -39,17 +41,6 @@
             transition: var(--transition-standard);
           }
 
-          &.mount {
-            .remote-type-icon {
-              color: var(--accent-color);
-            }
-            background: linear-gradient(
-              135deg,
-              rgba(var(--accent-color-rgb), 0.1) 0%,
-              rgba(var(--accent-color-rgb), 0.1) 100%
-            );
-            border: 2px solid rgba(var(--accent-color-rgb), 0.2);
-          }
           &.sync {
             .remote-type-icon {
               color: var(--primary-color);
@@ -71,6 +62,41 @@
               rgba(var(--yellow-rgb), 0.1) 100%
             );
             border: 2px solid rgba(var(--yellow-rgb), 0.2);
+          }
+          &.move {
+            .remote-type-icon {
+              color: var(--orange);
+            }
+            background: linear-gradient(
+              135deg,
+              rgba(var(--orange-rgb), 0.1) 0%,
+              rgba(var(--orange-rgb), 0.1) 100%
+            );
+            border: 2px solid rgba(var(--orange-rgb), 0.2);
+          }
+
+          &.bisync {
+            .remote-type-icon {
+              color: var(--purple);
+            }
+            background: linear-gradient(
+              135deg,
+              rgba(var(--purple-rgb), 0.1) 0%,
+              rgba(var(--purple-rgb), 0.1) 100%
+            );
+            border: 2px solid rgba(var(--purple-rgb), 0.2);
+          }
+
+          &.mount {
+            .remote-type-icon {
+              color: var(--accent-color);
+            }
+            background: linear-gradient(
+              135deg,
+              rgba(var(--accent-color-rgb), 0.1) 0%,
+              rgba(var(--accent-color-rgb), 0.1) 100%
+            );
+            border: 2px solid rgba(var(--accent-color-rgb), 0.2);
           }
         }
 
@@ -115,6 +141,10 @@
       padding: var(--space-sm);
       background: rgba(var(--app-text-color-rgb), var(--background-opacity));
       border: 1px solid rgba(var(--app-text-color-rgb), var(--border-opacity));
+
+      .operation-button.active {
+        box-shadow: 0 0 0 2px var(--operation-color);
+      }
     }
 
     /* Operation Monitor Section */
