--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -87,11 +87,11 @@
               a fast and simple setup.
             </p>
             <div class="empty-state-actions">
-              <button matButton="filled" color="primary" (click)="openQuickAddRemoteModal()">
+              <button matButton="filled" class="primary" (click)="openQuickAddRemoteModal()">
                 <mat-icon svgIcon="add"></mat-icon>
                 Add Quick Remote
               </button>
-              <button matButton="filled" color="accent" (click)="openRemoteConfigModal()">
+              <button matButton="filled" class="accent" (click)="openRemoteConfigModal()">
                 <mat-icon svgIcon="add"></mat-icon>
                 Add Detailed Remote
               </button>
